:bug: navigation menu z-index workaround for safari
Co-authored-by: Molkobain <lajarige.guillaume@free.fr>

--- a/css/backoffice/_shame.scss
+++ b/css/backoffice/_shame.scss
@@ -43,3 +43,9 @@
 .ibo-svg-illustration--container > svg *[fill="#6c63ff"]{
 	fill: $ibo-svg-illustration--fill;
 }
+
+// Workaround for a Safari (unsupported browser) issue: https://sourceforge.net/p/itop/discussion/itop-hub/thread/fc97ec4a10/?limit=25#1cc0/9930
+// Fix found here: https://stackoverflow.com/questions/40895387/z-index-not-working-on-safari-fine-on-firefox-and-chrome
+.ibo-navigation-menu.ibo-is-active .ibo-navigation-menu--drawer{
+    transform: translate3d(0,0,0);
+}
