--- a/templates/application/links/direct/block-direct-links-edit/layout.js.twig
+++ b/templates/application/links/direct/block-direct-links-edit/layout.js.twig
@@ -1,10 +1,8 @@
 {# @copyright   Copyright (C) 2010-2021 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
-
-console.log('{{ oUIBlock.GetClass() }}');
+console.log($('#{{ oUIBlock.oUILinksDirectWidget.GetInputId() }}').length + ' widgets');
 console.log('#{{ oUIBlock.oUILinksDirectWidget.GetInputId() }}');
-console.log($('#{{ oUIBlock.oUILinksDirectWidget.GetInputId() }}'));
 oWidget{{ oUIBlock.oUILinksDirectWidget.GetInputId() }} = $('#{{ oUIBlock.oUILinksDirectWidget.GetInputId() }}').directlinks({
     class_name: '{{ oUIBlock.oUILinksDirectWidget.GetClass() }}',
     att_code: '{{ oUIBlock.oUILinksDirectWidget.GetAttCode() }}',
@@ -15,4 +13,6 @@ oWidget{{ oUIBlock.oUILinksDirectWidget.GetInputId() }} = $('#{{ oUIBlock.oUILin
     oWizardHelper: '{{ oUIBlock.sWizHelper }}',
     do_search: '{{ oUIBlock.sJSDoSearch }}'
 });
+
+oWidget{{ oUIBlock.oUILinksDirectWidget.GetInputId() }}.bla();
 {% endapply %}
