N°5655 - Refactor portal modal dialog helper to global helper for both GUIs

--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/create/modal.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/create/modal.html.twig
@@ -25,7 +25,7 @@
 	            sUrl = CombodoGlobalToolbox.AddParameterToUrl(sUrl, 'ar_token', '{{ ar_token }}');
 
 	            // Creating a new modal
-	            CombodoPortalToolbox.OpenModal({
+                CombodoModal.OpenModal({
 		            base_modal: {
 			            usage: 'replace',
 			            selector: $(this).closest('.modal'),
