--- a/datamodels/2.x/itop-portal-base/portal/templates/bricks/object/mode_search_regular.html.twig
+++ b/datamodels/2.x/itop-portal-base/portal/templates/bricks/object/mode_search_regular.html.twig
@@ -143,7 +143,7 @@
 					oEvent.stopPropagation();
 
 					// Creating a new modal
-					CombodoPortalToolbox.OpenModal({
+                    CombodoModal.OpenModal({
 						content: {
 							endpoint: $(this).attr('href'),
 						},
