--- a/templates/base/components/datatable/layout.html.twig
+++ b/templates/base/components/datatable/layout.html.twig
@@ -28,4 +28,7 @@
 
 {% if oUIBlock.HasRowActions() %}
     {{ render_block(oUIBlock.GetRowActionsTemplate()) }}
+    {% if not oUIBlock.GetRowActionsConfirmDialogInitializedFlag() %}
+        {{ render_block(oUIBlock.GetRowActionsConfirmDialog()) }}
+    {% endif %}
 {% endif %}
