--- a/templates/base/components/datatable/layout.ready.js.twig
+++ b/templates/base/components/datatable/layout.ready.js.twig
@@ -420,4 +420,6 @@ if(window.ResizeObserver){
         oTable{{ sListIDForVarSuffix }}Resize.observe($('#{{ oUIBlock.GetId() }}')[0]);
 }
 
-{% include 'base/components/datatable/row-actions/handler.js.twig' %}
+{% if oUIBlock.HasRowActions() %}
+    {% include 'base/components/datatable/row-actions/handler.js.twig' %}
+{% endif %}
