--- a/templates/base/components/datatable/row-actions/handler.js.twig
+++ b/templates/base/components/datatable/row-actions/handler.js.twig
@@ -23,7 +23,7 @@
                 sMessage = sMessage.replaceAll('{item}', aRowData['{{ aAction.confirmation.message_row_data }}']);
             {% endif %}
             let sPrefKey = null;
-            {% if aAction.confirmation.message is defined %}
+            {% if aAction.confirmation.remember_choice_pref_key is defined %}
                 sPrefKey = '{{ aAction.confirmation.remember_choice_pref_key }}';
             {% endif %}
             HandleActionRowConfirmation (sTitle, sMessage, sPrefKey, ActionRowFunction{{ oUIBlock.GetId() }}{{ loop.index0 }}, {
