--- a/templates/base/components/datatable/layout.html.twig
+++ b/templates/base/components/datatable/layout.html.twig
@@ -21,11 +21,14 @@
         <th class="ibo-datatable-header" {% if aColumn["description"] is not empty %}title="{{ aColumn["description"] }}"{% endif %}>{{ aColumn["attribute_label"] }} </th>
     {% endfor %}
     {% if oUIBlock.HasRowActions() %}
-        <th class="ibo-datatable-header">{{ 'UI:Datatables:Column:RowActions:Label'|dict_s }} </th>
+        <th class="ibo-datatable-header" title="{{ 'UI:Datatables:Column:RowActions:Description'|dict_s }}">{{ 'UI:Datatables:Column:RowActions:Label'|dict_s }} </th>
     {% endif %}
     </thead>
 </table>
 
 {% if oUIBlock.HasRowActions() %}
     {{ render_block(oUIBlock.GetRowActionsTemplate()) }}
+    {% if not oUIBlock.GetRowActionsConfirmDialogInitializedFlag() %}
+        {{ render_block(oUIBlock.GetRowActionsConfirmDialog()) }}
+    {% endif %}
 {% endif %}
