--- a/templates/pages/backoffice/itopwebpage/layout.html.twig
+++ b/templates/pages/backoffice/itopwebpage/layout.html.twig
@@ -45,6 +45,10 @@
     <template id="ibo-modal-template">
         <div class="ibo-modal" data-role="ibo-modal">TODO 3.1: Please wait</div>
     </template>
+
+    {# do not show again template #}
+    {{ render_block(aTemplates.oTemplateDoNotShowAgainOption, {aPage: aPage})  }}
+
 {% endblock %}
 
 {% block iboCapturedOutput %}
